--- a/kubernetes/api/deployment.yaml
+++ b/kubernetes/api/deployment.yaml
@@ -43,5 +43,5 @@ spec:
           envFrom:
             - configMapRef:
                 name: api
-            - secretRef:
-                name: posts
+            # - secretRef:
+            #     name: posts
