--- a/kubernetes/common/app-config.yml
+++ b/kubernetes/common/app-config.yml
@@ -6,28 +6,28 @@ data:
   APP_NAME: Laravel
   APP_ENV: local
   APP_KEY: 
-  APP_DEBUG: false
-  APP_DEBUG: true
+  APP_DEBUG: "false"
+  APP_DEBUG: "true"
   APP_TIMEZONE: UTC
   APP_URL: http://localhost
   APP_LOCALE: en
   APP_FALLBACK_LOCALE: en
   APP_FAKER_LOCALE: en_US
   APP_MAINTENANCE_DRIVER: file
-  BCRYPT_ROUNDS: 12
+  BCRYPT_ROUNDS: "12"
   LOG_CHANNEL: stack
   LOG_STACK: single
   LOG_DEPRECATIONS_CHANNEL: null
   LOG_LEVEL: debug
   DB_CONNECTION: mysql
   DB_HOST: mysql
-  DB_PORT: 3306
+  DB_PORT: "3306"
   DB_DATABASE: backend
   DB_USERNAME: backend
   DB_PASSWORD: password
   SESSION_DRIVER: database
-  SESSION_LIFETIME: 120
-  SESSION_ENCRYPT: false
+  SESSION_LIFETIME: "120"
+  SESSION_ENCRYPT: "false"
   SESSION_PATH: /
   SESSION_DOMAIN: null
   BROADCAST_CONNECTION: log
@@ -35,14 +35,14 @@ data:
   QUEUE_CONNECTION: database
   CACHE_STORE: database
   CACHE_PREFIX: 
-  MEMCACHED_HOST: 127.0.0.1
+  MEMCACHED_HOST: "127.0.0.1"
   REDIS_CLIENT: phpredis
   REDIS_HOST: redis
   REDIS_PASSWORD: null
-  REDIS_PORT: 6479
+  REDIS_PORT: "6479"
   MAIL_MAILER: log
-  MAIL_HOST: 127.0.0.1
-  MAIL_PORT: 2525
+  MAIL_HOST: "127.0.0.1"
+  MAIL_PORT: "2525"
   MAIL_USERNAME: null
   MAIL_PASSWORD: null
   MAIL_ENCRYPTION: null
