--- a/kubernetes/frontend/deployment.yml
+++ b/kubernetes/frontend/deployment.yml
@@ -32,7 +32,7 @@ spec:
               port: 80
             initialDelaySeconds: 40
             periodSeconds: 30
-            failureTHreshold: 2
+            failureThreshold: 2
           readinessProbe:
             httpGet:
               path: /
