--- a/kubernetes/frontend/service.yml
+++ b/kubernetes/frontend/service.yml
@@ -1,7 +1,7 @@
-apiVersion:
+apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend
 spec:
   selector:
     app: frontend
