--- a/kubernetes/mysql/statefulset.yml
+++ b/kubernetes/mysql/statefulset.yml
@@ -7,7 +7,7 @@ spec:
     matchLabels:
       app: mysql
   serviceName: mysql
-  replcias: 1
+  replicas: 1
   template:
     metadata:
       labels:
@@ -24,7 +24,7 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: mysql-storage
-  volumes:
-    - name: mysql-storage
-      persistentVolumeClaim:
-        claimName: mysql-pvc
+      volumes:
+        - name: mysql-storage
+          persistentVolumeClaim:
+            claimName: mysql-pvc
